--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
 -->
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Number Maze - GethuGames</title>
         <link rel='stylesheet' href='style.css' />
         <script language='javascript' src='scripts/jquery-1.7.1.min.js'></script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
@@ -32,8 +35,10 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
     </head>
     <body> 
         <div id='gameArea'>
-            <canvas id='gameCanvas'></canvas>
-            <div id='statsPanel'></div>
+            <canvas class='gameScreen' id='menuCanvas'></canvas>
+            <canvas class='gameScreen' id='scoreCanvas'></canvas>
+            <canvas class='gameScreen' id='gameCanvas'></canvas>
+            <canvas class='gameScreen' id='gameOverCanvas'></canvas>
         </div>
     </body>
 </html>
