fine tuned drawing algorithm; rendered a grid temporarily

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/NumberMaze.js'></script>
         <script language='javascript' src='scripts/GameConfig.js'></script>
         <script language='javascript' src='scripts/UIManager.js'></script>
+        <script language='javascript' src='scripts/GridLayer.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
         <script>
             $(document).ready(function() {
