added vibration animation on collision

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
             Math.dist = function (p1, p2) {
                 return Math.sqrt((p2.x - p1.x) * (p2.x - p1.x) + (p2.y - p1.y) * (p2.y - p1.y));
             };
+            Math.PI = (22/7.0);
         </script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
         <script language='javascript' src='scripts/GameConfig.js'></script>
