--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/GameConfig.js'></script>
         <script language='javascript' src='scripts/UIManager.js'></script>
         <script language='javascript' src='scripts/LetterSprite.js'></script>
+        <script language='javascript' src='scripts/GameLine.js'></script>
         <script language='javascript' src='scripts/GridLayer.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
         <script>
