dummy HUD added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/LetterSprite.js'></script>
         <script language='javascript' src='scripts/GameLine.js'></script>
         <script language='javascript' src='scripts/GridLayer.js'></script>
+        <script language='javascript' src='scripts/HUDLayer.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
         <script language='javascript' src='scripts/PauseScreen.js'></script>
         <script>
