dummy HUD with pause button; pause, resume flow implemented

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
     <body> 
         <div id='gameArea'>
             <canvas class='gameScreen' id='gameCanvas'></canvas>
-            <canvas class='gameScreen' id='menuCanvas'></canvas>
-            <canvas class='gameScreen' id='scoreCanvas'></canvas>
-            <canvas class='gameScreen' id='gameOverCanvas'></canvas>
-            <canvas class='gameScreen' id='pauseCanvas'></canvas>
+            <canvas class='otherScreen' id='menuCanvas'></canvas>
+            <canvas class='otherScreen' id='scoreCanvas'></canvas>
+            <canvas class='otherScreen' id='gameOverCanvas'></canvas>
+            <canvas class='otherScreen' id='pauseCanvas'></canvas>
         </div>
     </body>
 </html>
