accelerometer input just added; fkin safari changes its orientatin while tilting, no ways to prevent that; ther are CSS hacks to do tat; ll do tomo

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
             <canvas class='gameScreen' id='gameOverCanvas'></canvas>
             <canvas class='gameScreen' id='pauseCanvas'></canvas>
         </div>
+        <input type='text' id='dbg' name='dbg' value='' />
     </body>
 </html>
