--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/HUDLayer.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
         <script language='javascript' src='scripts/MainMenu.js'></script>
+        <script language='javascript' src='scripts/Credits.js'></script>
+        <script language='javascript' src='scripts/LBoard.js'></script>
         <script language='javascript' src='scripts/PauseScreen.js'></script>
         <script language='javascript' src='scripts/GameOver.js'></script>
         <script language='javascript' src='scripts/MenuButton.js'></script>
