main menu buttons added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/GridLayer.js'></script>
         <script language='javascript' src='scripts/HUDLayer.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
+        <script language='javascript' src='scripts/MainMenu.js'></script>
         <script language='javascript' src='scripts/PauseScreen.js'></script>
         <script language='javascript' src='scripts/GameOver.js'></script>
         <script language='javascript' src='scripts/MenuButton.js'></script>
