aligned the buttons in MainMenu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <meta charset="utf-8">
         <title>Number Maze - GethuGames</title>
         <link rel='stylesheet' href='style.css' />
-        <link href='http://fonts.googleapis.com/css?family=Iceberg' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Iceberg|Homemade+Apple' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
         <script type="text/javascript">
             if (typeof jQuery == 'undefined')
