added bare chekcpoint remaining time generation logic

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/GameLine.js'></script>
         <script language='javascript' src='scripts/GridLayer.js'></script>
         <script language='javascript' src='scripts/HUDLayer.js'></script>
+        <script language='javascript' src='scripts/Score.js'></script>
         <script language='javascript' src='scripts/CoreEngine.js'></script>
         <script language='javascript' src='scripts/MainMenu.js'></script>
         <script language='javascript' src='scripts/Credits.js'></script>
