add game won screen with score display

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/LBoard.js'></script>
         <script language='javascript' src='scripts/PauseScreen.js'></script>
         <script language='javascript' src='scripts/GameOver.js'></script>
+        <script language='javascript' src='scripts/WonScreen.js'></script>
         <script language='javascript' src='scripts/MenuButton.js'></script>
         <script>
             $(document).ready(function() {
