integrated pseudo random target generation logic from SANKARGANESH86

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
                     return false;
             };
         </script>
+        <script language='javascript' src='scripts/logic.js'></script>
+        <script language='javascript' src='scripts/str.js'></script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
         <script language='javascript' src='scripts/profiles/GPlusWrapper.js'></script>
         <script language='javascript' src='scripts/profiles/FBWrapper.js'></script>
