removed twitter icon; fixed hard mode; realigned the nos closely; starting point anim

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
      
         <link href='http://fonts.googleapis.com/css?family=Iceberg|Homemade+Apple' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+        <script type="text/javascript" src="http://api.playtomic.com/js/playtomic.v1.9.min.js"></script>
         <script type="text/javascript">
             if (typeof jQuery == 'undefined')
             {
@@ -140,7 +141,6 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
                <div id='notloggedin'>
                    <img src='images/gplusIcon.png' alt='google plus icon' id='gPlusLogin' class='socialIcon'/>
                    <img src='images/fbIcon.png' alt='facebook icon' id='fbLogin' class='socialIcon'/>
-                   <img src='images/twitterIcon.png' alt='twitter icon' id='twitterLogin' class='socialIcon'/>
                </div>
                <div id='loggedin' style='font-size: 12px'>
                </div>
