star field integrated from Christophe code, yet to refine

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/NumberMaze.js'></script>
         <script language='javascript' src='scripts/profiles/GPlusWrapper.js'></script>
         <script language='javascript' src='scripts/profiles/FBWrapper.js'></script>
+        <script language='javascript' src='scripts/StarField.js'></script>
         <script language='javascript' src='scripts/State.js'></script>
         <script language='javascript' src='scripts/UIManager.js'></script>
         <script language='javascript' src='scripts/LetterSprite.js'></script>
