added all images; fine tuned star field animation; made the line look like a smoke

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         </script>
 
         <div id='gameArea'>
+            <img src='images/spaceBackground.jpg' style='position:absolute' />
             <canvas class='gameScreen' id='gameCanvas'></canvas>
             <canvas class='otherScreen' id='menuCanvas'></canvas>
             <div id='profileDiv' style="position:absolute;">
