added proper sprite sheets for asteroid rotate anim, integrated with kevins asset manager from his branch;

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
             };
         </script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
+        <script language='javascript' src='scripts/AssetManager.js'></script>
         <script language='javascript' src='scripts/profiles/GPlusWrapper.js'></script>
         <script language='javascript' src='scripts/profiles/FBWrapper.js'></script>
         <script language='javascript' src='scripts/StarField.js'></script>
