restructured NumberMaze class for pre-loader wait; added json loading support to asset manager

--- a/index.html
+++ b/index.html
@@ -106,11 +106,8 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
             })();
 
             $(document).ready(function() {
-
-            $.getJSON('images/asteroidSprite.json', function (j) {
-                var game = new NumberMaze(j);
-            });
                 // init the main gameEngine
+                var game = new NumberMaze();
             });
         </script>
     </head>
