--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Product">
-    <head profile="http://www.w3.org/2005/10/profile">
+    <head profile="http://www.w3.org/2005/10/profile" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# spacemaze: http://ogp.me/ns/fb/spacemaze#">
         <title>Number Maze</title>
 
         <meta charset="utf-8">
@@ -33,14 +33,15 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <link type="text/css" href="style.css" rel="Stylesheet" />
 
         <!--tags for opengraph-->
-        <meta property="og:title" content="Number Maze" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://www.gethugames.in/html5spacemaze/" />
-        <meta property="og:image" content="http://www.gethugames.in/html5spacemaze/images/icon128.png" />
         <meta property="og:site_name" content="Number Maze" />
         <meta property="fb:admins" content="100000655597076" />
-        <meta property="og:description" content="Connect the target numbers as fast as you can to get the best score. Fun addictive, competive HTML5 mobile web game"/>
-              
+        <meta property="fb:app_id"      content="353577954697060" /> 
+        <meta property="og:type"        content="spacemaze:level" /> 
+        <meta property="og:url"         content="http://www.gethugames.in/html5spacemaze/" /> 
+        <meta property="og:title"       content="Level" /> 
+        <meta property="og:image"       content="http://www.gethugames.in/html5spacemaze/images/icon128.png" /> 
+        <meta property="og:description" content="cleared a level" />
+
         <!--tags for Google+-->
         <meta itemprop="name" content="Number Maze">
         <meta itemprop="url" content="http://www.gethugames.in/html5spacemaze/">
