corrections for all screens

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
 
         <script language='javascript' src='scripts/NumberMaze.js'></script>
 		<script language='javascript' src='scripts/AssetManager.js'></script>
+		<script language='javascript' src='scripts/AudioManager.js'></script>
         <script language='javascript' src='scripts/profiles/GPlusWrapper.js'></script>
         <script language='javascript' src='scripts/profiles/FBWrapper.js'></script>
         <script language='javascript' src='scripts/StarField.js'></script>
@@ -151,6 +152,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/WonScreen.js'></script>
         <script language='javascript' src='scripts/MenuButton.js'></script>
 		<script language='javascript' src='scripts/PracticeGame.js'></script>
+		<script language='javascript' src='scripts/PractiseFail.js'></script>
 		
         <script>
             var _gaq = _gaq || [];
