integrated with PxLoader and implemented Json loader

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
      
         <link href='http://fonts.googleapis.com/css?family=Iceberg|Homemade+Apple|Geostar+Fill|Geostar' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-        <script type="text/javascript" src="http://api.playtomic.com/js/playtomic.v1.9.min.js"></script>
+        <!--<script type="text/javascript" src="http://api.playtomic.com/js/playtomic.v1.9.min.js"></script>-->
 	    <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
     </head>
     <body> 
@@ -130,8 +130,13 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         </script>
 		
 
+		<script language='javascript' src='scripts/soundmanager2.js'></script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
 		<script language='javascript' src='scripts/AssetManager.js'></script>
+		<script language='javascript' src='scripts/PxLoader.js'></script>
+		<script language='javascript' src='scripts/PxLoaderImage.js'></script>
+		<script language='javascript' src='scripts/PxLoaderSound.js'></script>
+		<script language='javascript' src='scripts/PxLoaderJson.js'></script>
 		<script language='javascript' src='scripts/AudioManager.js'></script>
         <script language='javascript' src='scripts/profiles/GPlusWrapper.js'></script>
         <script language='javascript' src='scripts/profiles/FBWrapper.js'></script>
