--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 Copyright 2011 Saiyasodharan (http://saiy2k.blogspot.com/)
 
@@ -16,7 +17,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Product">
     <head profile="http://www.w3.org/2005/10/profile" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# spacemaze: http://ogp.me/ns/fb/spacemaze#">
         <title>Number Maze</title>
@@ -50,7 +50,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
      
         <link href='http://fonts.googleapis.com/css?family=Iceberg|Homemade+Apple|Geostar+Fill|Geostar' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-        <!--<script type="text/javascript" src="http://api.playtomic.com/js/playtomic.v1.9.min.js"></script>-->
+        <script type="text/javascript" src="http://api.playtomic.com/js/playtomic.v1.9.min.js"></script>
 	    <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
     </head>
     <body> 
